Bump up gradle to 8.2.1